--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <div class="container">
-
+      <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
+      <!--/*/ <th:block th:include="fragments/productsTable :: productsTable"></th:block> /*/-->
     </div>
   </body>
 </html>
