--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,10 @@
   </head>
   <body>
     <div class="container">
-
+        <!-- include header fragment -->
+        <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
+        <!-- include products table fragment -->
+        <!--/*/ <th:block th:include="fragments/productsTable :: productsTable"></th:block> /*/-->
     </div>
   </body>
 </html>
