add search feature

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head lang="en">
-    <title>CoffeeShop</title>
+    <title>CoffeeShop!</title>
     <!--/*/ <th:block th:include="fragments/head :: head"></th:block> /*/-->
   </head>
   <body>
     <div class="container">
+      <!-- add productsTable fragment here -->
+        <!--/*/ <th:block th:include="fragments/productsTable :: productsTable"></th:block> /*/-->
+
 
     </div>
   </body>
