Added the Search functionality

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,10 @@
   </head>
   <body>
     <div class="container">
-
+      <!-- add the header fragment -->
+      <!--/*/ <div th:replace="fragments/header :: header"></div> /*/-->
+      <!-- add the productsTable fragment -->
+      <!--/*/ <div th:replace="fragments/productsTable :: productsTable"></div> /*/-->
     </div>
   </body>
 </html>
