--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <div class="container">
+      <!-- add a header fragment -->
+        <!--/*/ <div th:replace="fragments/header :: header"></div> /*/-->
+      <!-- add a productsTable fragment -->
+      <!--/*/ <div th:replace="fragments/productsTable :: productsTable"></div> /*/-->
 
     </div>
   </body>
