--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,12 @@
   <body>
     <div class="container">
 
+      <!-- add a header fragment -->
+      <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
+
+      <!-- add a products table fragment -->
+      <!--/*/ <th:block th:include="fragments/productsTable :: productsTable"></th:block> /*/-->
+
     </div>
   </body>
 </html>
