Add search functionality

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <div class="container">
+      <!-- add a header fragment -->
+        <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
+      <!-- add a productsTable fragment -->
+        <!--/*/ <th:block th:include="fragments/productsTable :: productsTable"></th:block> /*/-->
+
 
     </div>
   </body>
