--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,14 @@
   </head>
   <body>
     <div class="container">
+    <!-- insert a fragment header-->
+    <!--/*/ <th:block th:include="fragments/header :: header"></th:block> /*/-->
+      <!-- insert a productsTable fragment -->
+      
+
+
+
+
 
     </div>
   </body>
